--- a/the-wild-oasis/package.json
+++ b/the-wild-oasis/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.49.10",
     "@tanstack/react-query": "^5.80.5",
     "@tanstack/react-query-devtools": "^5.80.5",
+    "date-fns": "^4.1.0",
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
