--- a/the-wild-oasis/package.json
+++ b/the-wild-oasis/package.json
@@ -22,6 +22,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
+    "recharts": "^2.15.3",
     "styled-components": "^6.1.18",
     "vite-plugin-eslint": "^1.8.1"
   },
